force-app/main/default/objects/Assignment_Group__c/Assignment_Group__c.object-meta.xml
<CustomObject>
    <description>This is the main object of Q-assign. it contains all the information about records assignment criteria,  records source, assignment method, mode, cap and quotas etc.</description>
    <label>QA Assignment Group</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Assignment Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>