force-app/main/default/objects/Assignment_Group__c/fields/Active_Only_Outside_Working_Hours__c.field-meta.xml
<CustomField>
    <fullName>Active_Only_Outside_Working_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Only Outside Working Hours</label>
    <type>Checkbox</type>
</CustomField>