force-app/main/default/objects/Assignment_Group__c/fields/Active_Records__c.field-meta.xml
<CustomField>
    <fullName>Active_Records__c</fullName>
    <label>Active Records</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>