force-app/main/default/objects/Assignment_Group__c/fields/Active_Records_Only__c.field-meta.xml
<CustomField>
    <fullName>Active_Records_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active records only</label>
    <type>Checkbox</type>
</CustomField>