force-app/main/default/objects/Assignment_Group__c/fields/Active_Status_Field__c.field-meta.xml
<CustomField>
    <fullName>Active_Status_Field__c</fullName>
    <label>Active Status Field</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>