force-app/main/default/objects/Assignment_Group__c/fields/Active_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Active_Statuses__c</fullName>
    <label>Active Statuses</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>