force-app/main/default/objects/Assignment_Group__c/fields/Activity_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Activity_Timeout__c</fullName>
    <label>Activity Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>