force-app/main/default/objects/Assignment_Group__c/fields/ARC_Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>ARC_Filter_Logic__c</fullName>
    <label>ARC Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>