force-app/main/default/objects/Assignment_Group__c/fields/ARC_Prepared_Form__c.field-meta.xml
<CustomField>
    <fullName>ARC_Prepared_Form__c</fullName>
    <label>ARC Prepared Form</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>