force-app/main/default/objects/Assignment_Group__c/fields/Assign_To_Logged_In_Users__c.field-meta.xml
<CustomField>
    <fullName>Assign_To_Logged_In_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign To Logged In Users</label>
    <type>Checkbox</type>
</CustomField>