force-app/main/default/objects/Assignment_Group__c/fields/Assign_Users_in_Working_Shift_Hours_Only__c.field-meta.xml
<CustomField>
    <fullName>Assign_Users_in_Working_Shift_Hours_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Assign to users in their Working/Shift Hours only</description>
    <inlineHelpText>Assign to users in their Working/Shift Hours only</inlineHelpText>
    <label>Assign Users in Working Shift Hours Only</label>
    <type>Checkbox</type>
</CustomField>