force-app/main/default/objects/Assignment_Group__c/fields/Assignment_Action__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Action__c</fullName>
    <description>The action to take when a work item is assigned by Q-assign, such as changing the owner of the work item, or passing it to Omni-Channel to assign</description>
    <label>Assignment Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change Owner</fullName>
                <default>true</default>
                <label>Change Owner</label>
            </value>
            <value>
                <fullName>Assign via Omni-Channel - Push to 1 user at a time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>