force-app/main/default/objects/Assignment_Group__c/fields/Assignment_Method2__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Method2__c</fullName>
    <label>Assignment Method2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FIFO / Ascending</fullName>
            </value>
            <value>
                <fullName>LIFO / Descending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>