force-app/main/default/objects/Assignment_Group__c/fields/Assignment_Method_Basis3__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Method_Basis3__c</fullName>
    <label>Assignment Method Basis3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>