force-app/main/default/objects/Assignment_Group__c/fields/Assignment_Method_Basis__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Method_Basis__c</fullName>
    <label>Assignment Method Basis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LastModifiedDate</fullName>
                <default>true</default>
                <label>LastModifiedDate</label>
            </value>
            <value>
                <fullName>CreatedDate</fullName>
            </value>
            <value>
                <fullName>Q_assign_Custom_Seq__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>