force-app/main/default/objects/Assignment_Group__c/fields/Assignment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Mode__c</fullName>
    <label>Assignment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Round Robin</fullName>
                <default>true</default>
                <label>Round Robin</label>
            </value>
            <value>
                <fullName>Load Balanced + Selection Criteria</fullName>
            </value>
            <value>
                <fullName>Points Based - Highest Points</fullName>
            </value>
            <value>
                <fullName>Points Based - Lowest Points</fullName>
            </value>
            <value>
                <fullName>Load Balanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>