force-app/main/default/objects/Assignment_Group__c/fields/Assignment_Quota__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Quota__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Assignment Quota</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>