force-app/main/default/objects/Assignment_Group__c/fields/Assignment_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Sequence__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Assignment Sequence</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>