force-app/main/default/objects/Assignment_Group__c/fields/Assignments_Level__c.field-meta.xml
<CustomField>
    <fullName>Assignments_Level__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Assignments level</description>
    <label>Max Assignment Cap</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>