force-app/main/default/objects/Assignment_Group__c/fields/Business_Hours_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Hours Schedule</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>QA_Assignment_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>