force-app/main/default/objects/Assignment_Group__c/fields/Comply_With_Quota__c.field-meta.xml
<CustomField>
    <fullName>Comply_With_Quota__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comply With Quota</label>
    <type>Checkbox</type>
</CustomField>