force-app/main/default/objects/Assignment_Group__c/fields/Config_Last_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Config_Last_Updated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Config Last Updated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QA_Assignment_Groups1</relationshipName>
    <type>Lookup</type>
</CustomField>