force-app/main/default/objects/Assignment_Group__c/fields/Config_Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Config_Last_Updated_Date__c</fullName>
    <label>Config Last Updated Date</label>
    <type>DateTime</type>
</CustomField>