force-app/main/default/objects/Assignment_Group__c/fields/Global_Assignment_Quota__c.field-meta.xml
<CustomField>
    <fullName>Global_Assignment_Quota__c</fullName>
    <defaultValue>(0)</defaultValue>
    <label>Global Assignment Quota</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>