force-app/main/default/objects/Assignment_Group__c/fields/Global_Assignment_Quota_Period__c.field-meta.xml
<CustomField>
    <fullName>Global_Assignment_Quota_Period__c</fullName>
    <label>Global Assignment Quota Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
                <default>true</default>
                <label>Daily</label>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>