force-app/main/default/objects/Assignment_Group__c/fields/Last_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Assignment_Date__c</fullName>
    <inlineHelpText>Date Time when this group last processed through schedular</inlineHelpText>
    <label>Last Assignment Date</label>
    <type>DateTime</type>
</CustomField>