force-app/main/default/objects/Assignment_Group__c/fields/Load_Calc_Obj2_x_ARC_Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>Load_Calc_Obj2_x_ARC_Filter_Logic__c</fullName>
    <description>This field stores the filter logic specified to be applied to ARC for Load Calculation object 2 records</description>
    <label>Load Calc Obj2 - ARC Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>