force-app/main/default/objects/Assignment_Group__c/fields/Load_Calc_Obj2_x_ARC_Prepared_Form__c.field-meta.xml
<CustomField>
    <fullName>Load_Calc_Obj2_x_ARC_Prepared_Form__c</fullName>
    <description>This field stores &apos;SOQL ready&apos; Active record criteria for Load Calculation Object 2</description>
    <label>Load Calc Obj2 - ARC Prepared Form</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>