force-app/main/default/objects/Assignment_Group__c/fields/Load_Calc_Obj3_x_Load_Points_Field__c.field-meta.xml
<CustomField>
    <fullName>Load_Calc_Obj3_x_Load_Points_Field__c</fullName>
    <description>This field stores a &apos;numeric&apos; field, of Load Calculation Object 3, that describes the Active load that is added by any record of Load Calculation Object 3, if respective ARC is met</description>
    <label>Load Calc Obj3 - Load Points Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>