force-app/main/default/objects/Assignment_Group__c/fields/Load_Calc_Obj3_x_Name__c.field-meta.xml
<CustomField>
    <fullName>Load_Calc_Obj3_x_Name__c</fullName>
    <description>This field stores the API  name of Load Calculation Object 3</description>
    <label>Load Calculation Object3 - Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>