force-app/main/default/objects/Assignment_Group__c/fields/Load_Calc_Obj3_x_Owner_Field__c.field-meta.xml
<CustomField>
    <fullName>Load_Calc_Obj3_x_Owner_Field__c</fullName>
    <description>This field stores the user lookup field, which is used to determine the owner of third Load Calculation Object 3 records</description>
    <label>Load Calculation Object3 - Owner Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>