force-app/main/default/objects/Assignment_Group__c/fields/Load_Calc_Obj3_x_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Load_Calc_Obj3_x_Prefix__c</fullName>
    <label>Load Calculation Object3 - Prefix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>