force-app/main/default/objects/Assignment_Group__c/fields/Load_Points_Field__c.field-meta.xml
<CustomField>
    <fullName>Load_Points_Field__c</fullName>
    <label>Load Points Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>