force-app/main/default/objects/Assignment_Group__c/fields/Matching_Rule_Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>Matching_Rule_Filter_Logic__c</fullName>
    <description>Stores filter logic for matching rules.</description>
    <label>Matching Rule Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>