force-app/main/default/objects/Assignment_Group__c/fields/Max_Assignment_Points_Cap__c.field-meta.xml
<CustomField>
    <fullName>Max_Assignment_Points_Cap__c</fullName>
    <label>Max Load Points Cap</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>