force-app/main/default/objects/Assignment_Group__c/fields/Member_Availability_Prioritized__c.field-meta.xml
<CustomField>
    <fullName>Member_Availability_Prioritized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field controls bevhariou for Assignment Group to perform Member Availablity prioritization or not.</description>
    <inlineHelpText>When checked, Assignment Group is processed in Member Availability Prioritized mode. If turned on it handles situations where Member availability constrained - i.e. only a few members available at a time and we need to  assess a lot of records.</inlineHelpText>
    <label>Member Availability Prioritized</label>
    <type>Checkbox</type>
</CustomField>