force-app/main/default/objects/Assignment_Group__c/fields/Member_Sel_Rule_x_add_users_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Member_Sel_Rule_x_add_users_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When a user is automatically added to this Assignment Group by the Member Selection rules, automatically set this new user as Enabled within this Assignment Group. If not checked, then new users will be added as NOT Enabled.</description>
    <inlineHelpText>When a user is automatically added to this Assignment Group by the Member Selection rules, automatically set this new user as Enabled within this Assignment Group. If not checked, then new users will be added as NOT Enabled.</inlineHelpText>
    <label>Set added users as Enabled</label>
    <type>Checkbox</type>
</CustomField>