force-app/main/default/objects/Assignment_Group__c/fields/Member_Sel_Rule_x_Auto_add_Users__c.field-meta.xml
<CustomField>
    <fullName>Member_Sel_Rule_x_Auto_add_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, matching users will automatically be added to this Assignment Group if they are not already members. They will become available for assignment the next time this Assignment Group is run after they have been added.</description>
    <inlineHelpText>When checked, matching users will automatically be added to this Assignment Group if they are not already members. They will become available for assignment the next time this Assignment Group is run after they have been added.</inlineHelpText>
    <label>Auto add Users</label>
    <type>Checkbox</type>
</CustomField>