force-app/main/default/objects/Assignment_Group__c/fields/Member_Sel_Rule_x_Freq_in_Min__c.field-meta.xml
<CustomField>
    <fullName>Member_Sel_Rule_x_Freq_in_Min__c</fullName>
    <defaultValue>60</defaultValue>
    <description>Select the frequency of running the Member Selection Rules and adding missing users to this Assignment Group. This will only run if the Assignment Group itself is Enabled.</description>
    <inlineHelpText>Select the frequency of running the Member Selection Rules and adding missing users to this Assignment Group. This will only run if the Assignment Group itself is Enabled.</inlineHelpText>
    <label>Frequency in Min</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>