force-app/main/default/objects/Assignment_Group__c/fields/Member_Sel_Rule_x_Last_Eval_Time__c.field-meta.xml
<CustomField>
    <fullName>Member_Sel_Rule_x_Last_Eval_Time__c</fullName>
    <description>The last time this Assignment Group&apos;s Member Selection Rules were run.</description>
    <inlineHelpText>The last time this Assignment Group&apos;s Member Selection Rules were run.</inlineHelpText>
    <label>Last Evaluated Time</label>
    <type>DateTime</type>
</CustomField>