force-app/main/default/objects/Assignment_Group__c/fields/Object_Owner_Field__c.field-meta.xml
<CustomField>
    <fullName>Object_Owner_Field__c</fullName>
    <description>This field is used to store API name of the object&apos;s field that is populated with the Id of the user when assignment happens. It defaults to OwenrId (built-in) field of object. Users can specify what field to use as &quot;Owner&quot;.</description>
    <inlineHelpText>This field is used to store API name of the object&apos;s field that is populated with the Id of the user when assignment happens. It defaults to OwenrId (built-in) field of object. Users can specify what field to use as &quot;Owner&quot;.</inlineHelpText>
    <label>Object Owner Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>