force-app/main/default/objects/Assignment_Group__c/fields/Override_Assign_Config__c.field-meta.xml
<CustomField>
    <fullName>Override_Assign_Config__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Assign Config</label>
    <type>Checkbox</type>
</CustomField>