force-app/main/default/objects/Assignment_Group__c/fields/Override_Object_Settings__c.field-meta.xml
<CustomField>
    <fullName>Override_Object_Settings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Object Settings</label>
    <type>Checkbox</type>
</CustomField>