force-app/main/default/objects/Assignment_Group__c/fields/Point_Score_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Point_Score_Threshold__c</fullName>
    <label>Point Score Threshold</label>
    <length>16</length>
    <type>Text</type>
</CustomField>