force-app/main/default/objects/Assignment_Group__c/fields/Process_Members_Records__c.field-meta.xml
<CustomField>
    <fullName>Process_Members_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process Members Records</label>
    <type>Checkbox</type>
</CustomField>