force-app/main/default/objects/Assignment_Group__c/fields/Processing_Order__c.field-meta.xml
<CustomField>
    <fullName>Processing_Order__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Processing Order</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>