force-app/main/default/objects/Assignment_Group__c/fields/Processing_Type__c.field-meta.xml
<CustomField>
    <fullName>Processing_Type__c</fullName>
    <label>Processing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Push</fullName>
                <default>true</default>
                <label>Push</label>
            </value>
            <value>
                <fullName>Pull</fullName>
            </value>
            <value>
                <fullName>Push + Pull</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>