force-app/main/default/objects/Assignment_Group__c/fields/QSC_Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>QSC_Filter_Logic__c</fullName>
    <label>QSC Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>