force-app/main/default/objects/Assignment_Group__c/fields/QSC_Prepared_Form__c.field-meta.xml
<CustomField>
    <fullName>QSC_Prepared_Form__c</fullName>
    <label>QSC Prepared Form</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>