force-app/main/default/objects/Assignment_Group__c/fields/Queue_Type__c.field-meta.xml
<CustomField>
    <fullName>Queue_Type__c</fullName>
    <label>Queue Type</label>
    <length>5</length>
    <type>Text</type>
</CustomField>