force-app/main/default/objects/Assignment_Group__c/fields/Records_Commit_Setting__c.field-meta.xml
<CustomField>
    <fullName>Records_Commit_Setting__c</fullName>
    <description>his setting controls at what stage the records processed and modified by this AG are committed to Database</description>
    <inlineHelpText>Per Processed Record: Each modified record will be committed right after its processing and before processing next record starts i.e. one commit (DML) per record; Per Assignment Group: All records processed and modified by the AG will be committed after processing them all i.e. only 1 commit (DML) for all records modified by AG. Automatic: Based on AG&apos;s configuration, Q-assign decides whether to use &apos;Per Processed Record&apos; or &apos;Per Assignment Group&apos; commit</inlineHelpText>
    <label>Records Commit Setting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Per Processed Record</fullName>
            </value>
            <value>
                <fullName>Per Assignment Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>