force-app/main/default/objects/Assignment_Group__c/fields/Records_Processed__c.field-meta.xml
<CustomField>
    <fullName>Records_Processed__c</fullName>
    <label>Records Processed</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>