force-app/main/default/objects/Assignment_Group__c/fields/Records_Selected_From_Queue__c.field-meta.xml
<CustomField>
    <fullName>Records_Selected_From_Queue__c</fullName>
    <label>Records Selected From Queue</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>