force-app/main/default/objects/Assignment_Group__c/fields/Refresh_Time__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Time__c</fullName>
    <inlineHelpText>Auto refresh time (in seconds) for Assignment Group members page.</inlineHelpText>
    <label>Refresh Time</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>