force-app/main/default/objects/Assignment_Group__c/fields/Round_Robin_Quota_Period__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_Quota_Period__c</fullName>
    <label>Quota Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Hourly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>