force-app/main/default/objects/Assignment_Group__c/fields/Run_Matching_Rules_Only__c.field-meta.xml
<CustomField>
    <fullName>Run_Matching_Rules_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Matching Rules Only</label>
    <type>Checkbox</type>
</CustomField>