force-app/main/default/objects/Assignment_Group__c/fields/Scheduler__c.field-meta.xml
<CustomField>
    <fullName>Scheduler__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Choose the Scheduler this Assignment Group belongs to. This Assignment Group will then run as part of that Scheduler. If no Scheduler is selected then this Assignment Group will not run automatically as part of a Scheduler.</description>
    <inlineHelpText>Choose the Scheduler this Assignment Group belongs to. This Assignment Group will then run as part of that Scheduler. If no Scheduler is selected then this Assignment Group will not run automatically as part of a Scheduler.</inlineHelpText>
    <label>Scheduler</label>
    <referenceTo>Assignment_Configuration__c</referenceTo>
    <relationshipLabel>QA Assignment Groups</relationshipLabel>
    <relationshipName>QA_Assignment_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>