force-app/main/default/objects/Assignment_Group__c/fields/Show_Pull_Button__c.field-meta.xml
<CustomField>
    <fullName>Show_Pull_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Pull Button</label>
    <type>Checkbox</type>
</CustomField>