force-app/main/default/objects/Assignment_Group__c/fields/Show_QA_Logout_Button_to_Users__c.field-meta.xml
<CustomField>
    <fullName>Show_QA_Logout_Button_to_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Q-assign Logout Button to Users</label>
    <type>Checkbox</type>
</CustomField>