force-app/main/default/objects/Assignment_Group__c/fields/Skip_Assign_If_more_than_1_member_match__c.field-meta.xml
<CustomField>
    <fullName>Skip_Assign_If_more_than_1_member_match__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this assignment group will skip assigning any records that result in more than 1 matching available user/member</description>
    <inlineHelpText>When checked, this assignment group will skip assigning any records that result in more than 1 matching available user/member</inlineHelpText>
    <label>Skip Assign If more than 1 user matches</label>
    <type>Checkbox</type>
</CustomField>