force-app/main/default/objects/Assignment_Group__c/fields/This_Distribution_Group_only__c.field-meta.xml
<CustomField>
    <fullName>This_Distribution_Group_only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>This Distribution Group only</label>
    <type>Checkbox</type>
</CustomField>