force-app/main/default/objects/Assignment_Group__c/fields/Time_Unit__c.field-meta.xml
<CustomField>
    <fullName>Time_Unit__c</fullName>
    <label>Time Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>