force-app/main/default/objects/Assignment_Group__c/fields/Units_Of_Time__c.field-meta.xml
<CustomField>
    <fullName>Units_Of_Time__c</fullName>
    <label>Units Of Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>