force-app/main/default/objects/Assignment_Group__c/fields/Update_Field__c.field-meta.xml
<CustomField>
    <fullName>Update_Field__c</fullName>
    <label>Update Field</label>
    <length>128</length>
    <type>Text</type>
</CustomField>