force-app/main/default/objects/Assignment_Group__c/fields/Update_Value__c.field-meta.xml
<CustomField>
    <fullName>Update_Value__c</fullName>
    <label>Update Value</label>
    <length>128</length>
    <type>Text</type>
</CustomField>