force-app/main/default/objects/Assignment_Group__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QA_Assignment_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>