force-app/main/default/objects/Assignment_Group__c/fields/Working_Hours_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Working_Hours_Schedule__c</fullName>
    <label>Assignment Hours Schedule</label>
    <length>18</length>
    <type>Text</type>
</CustomField>