force-app/main/default/objects/Assignment_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Is_Active__c</columns>
    <columns>Processing_Type__c</columns>
    <columns>Object_Prefix__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>